<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/yellow"
    android:paddingHorizontal="50dp">

    <ImageView
        android:id="@+id/iv_signUp"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:background="@drawable/illustration_page_signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/tv_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="40sp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/iv_signUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_signUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/full_name"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            android:background="@drawable/fill_form_input"
            android:paddingVertical="5dp"
            android:paddingHorizontal="15dp"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:id="@+id/et_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            android:background="@drawable/fill_form_input"
            android:paddingVertical="5dp"
            android:paddingHorizontal="15dp"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            android:background="@drawable/fill_form_input"
            android:paddingVertical="5dp"
            android:paddingHorizontal="15dp"
            android:layout_marginBottom="15dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_semibold"
            android:background="@drawable/fill_button"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_regular"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>