<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/peach">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:paddingHorizontal="15dp"
        android:background="@color/white">
        <ImageView
            android:id="@+id/iv_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit Profil"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ScrollView
        android:id="@+id/sv_edit_profil"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_top_scroll_edit_profil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <LinearLayout
                android:id="@+id/conEditProfilAtas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/cl_top_scroll_edit_profil"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingHorizontal="25dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="25dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nama_lengkap"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="12sp"
                        android:textColor="@color/black"/>
                    <EditText
                        android:id="@+id/et_nama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/fill_form_input_small"
                        android:paddingLeft="16dp"
                        android:paddingVertical="10dp"
                        android:hint="@string/masukkan_nama_lengkap"
                        android:textColorHint="@color/bright_grey"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:fontFamily="@font/poppins_regular"
                        android:layout_marginTop="8dp">
                    </EditText>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="25dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tanggal_lahir"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="12sp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:id="@+id/tv_tanggalLahir"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/fill_form_input_small"
                        android:paddingLeft="16dp"
                        android:paddingVertical="10dp"
                        android:hint="@string/pilih_tanggal"
                        android:textColorHint="@color/bright_grey"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:fontFamily="@font/poppins_regular"
                        android:layout_marginTop="8dp">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="25dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/jenis_kelamin"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="12sp"
                        android:textColor="@color/black"/>
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/fill_form_input_small"
                        android:paddingLeft="10dp"
                        android:paddingVertical="7dp"
                        android:layout_marginTop="8dp">
                        <Spinner
                            android:id="@+id/spinner_jenisKelamin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:entries="@array/jenis_kelamin"/>
                    </FrameLayout>
                </LinearLayout>
            </LinearLayout>
            <ImageView
                android:id="@+id/pembatas"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:src="@color/green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/conEditProfilAtas"
                android:layout_marginTop="15dp"/>
            <LinearLayout
                android:id="@+id/conEditProfilBawah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pembatas"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingHorizontal="25dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="15dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nomor_handphone"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="12sp"
                        android:textColor="@color/black"/>
                    <EditText
                        android:id="@+id/et_nomorTelepon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/fill_form_input_small"
                        android:paddingLeft="16dp"
                        android:paddingVertical="10dp"
                        android:hint="@string/masukkan_nomor_handphone"
                        android:textColorHint="@color/bright_grey"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:fontFamily="@font/poppins_regular"
                        android:layout_marginTop="8dp">
                    </EditText>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="25dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Email"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="12sp"
                        android:textColor="@color/black"/>
                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/fill_form_input_small"
                        android:paddingLeft="16dp"
                        android:paddingVertical="10dp"
                        android:hint="@string/masukkan_email"
                        android:textColorHint="@color/bright_grey"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:fontFamily="@font/poppins_regular"
                        android:layout_marginTop="8dp">
                    </EditText>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="25dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/update_foto_profil"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="12sp"
                        android:textColor="@color/black"/>
                    <RelativeLayout
                        android:id="@+id/rl_profil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/fill_form_input_picture"
                        android:orientation="horizontal"
                        android:layout_marginTop="8dp">
                        <ImageView
                            android:id="@+id/iv_previewProfil"
                            android:layout_width="wrap_content"
                            android:layout_height="150dp"
                            android:maxHeight="200dp"
                            android:src="@drawable/fill_page_splashscreen"
                            android:layout_margin="10dp"
                            android:visibility="gone"/>
                        <TextView
                            android:id="@+id/tv_uploadProfil"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="16dp"
                            android:paddingVertical="10dp"
                            android:hint="@string/tambahkan_gambar"
                            android:textColorHint="@color/bright_grey"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:fontFamily="@font/poppins_regular">
                        </TextView>
                        <ImageView
                            android:id="@+id/iv_uploadProfil"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_upload"
                            android:layout_alignParentRight="true"
                            android:layout_centerInParent="true"
                            android:layout_marginRight="15dp"/>
                    </RelativeLayout>
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_simpanProfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/fill_button_small"
                    android:layout_marginTop="30dp"
                    android:text="Simpan"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:layout_gravity="center"
                    android:layout_marginBottom="30dp"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>